kubernetes/apps/observability/grafana/instance/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: observability
spec:
  hostnames:
    - "grafana.${SECRET_DOMAIN}"
  parentRefs:
    - name: envoy-external
      namespace: network
  rules:
    - matches:
        - path: { type: PathPrefix, value: / }
      backendRefs:
        - name: grafana-service
          port: 3000
